@@ -90,7 +90,7 @@ public class RoomDAO extends AbstractDataBase<Room> {
                 throw new RuntimeException(e);
             }
             return id == room.getId() && id > 0;
-        }).map(RowData::getRowIndex).toList());
+        }).map(RowData::getRowIndex).collect(Collectors.toList()));
 
         // 要从后往前删除，要不然前面的删了之后， 后面的记录就会顶上来， 到时候row index就变了
         rowIndexList.sort(Comparator.reverseOrder());
@@ -113,7 +113,7 @@ public class RoomDAO extends AbstractDataBase<Room> {
                 throw new RuntimeException(e);
             }
             return id == room.getId() && id > 0;
-        }).toList();
+        }).collect(Collectors.toList());
 
         if (CollectionUtils.isEmpty(rowDataList)) {
             return 0;
